@@ -431,6 +431,12 @@ class OvmsVehicle : public InternalRamAllocated
     virtual void NotifiedVehicleChargePilotOff() {}
     virtual void NotifiedVehicleChargeTimermodeOn() {}
     virtual void NotifiedVehicleChargeTimermodeOff() {}
+    virtual void NotifiedVehicleGenStart() {}
+    virtual void NotifiedVehicleGenStop() {}
+    virtual void NotifiedVehicleGenPilotOn() {}
+    virtual void NotifiedVehicleGenPilotOff() {}
+    virtual void NotifiedVehicleGenTimermodeOn() {}
+    virtual void NotifiedVehicleGenTimermodeOff() {}
     virtual void NotifiedVehicleAux12vOn() {}
     virtual void NotifiedVehicleAux12vOff() {}
     virtual void NotifiedVehicleCharge12vStart() {}
